--- a/test/fixtures/gossips.yml
+++ b/test/fixtures/gossips.yml
@@ -1,3 +1,14 @@
+# == Schema Information
+#
+# Table name: gossips
+#
+#  id               :integer          not null, primary key
+#  anonymous_author :string
+#  content          :string
+#  created_at       :datetime         not null
+#  updated_at       :datetime         not null
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
